--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="contact-info">
             <h2>Informações Pessoais</h2>
-            <p id="phone">Telefone: (35) 9 9153-7328</p>
+            <p id="phone">Tel/What's: (35) 9 9153-7328</p>
             <p id="email">Email: <a href="mailto:tnaves@hotmail.com">tnaves@hotmail.com</a> / <a href="mailto:thi.naves23@gmail.com">thi.naves23@gmail.com</a></p>
             <p id="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/thiago-naves-6a2a21208/">https://www.linkedin.com/in/thiago-naves-6a2a21208/</a></p>
             <p id="instagram">Instagram: <a href="https://www.instagram.com/thi.naves/?hl=pt-br/">https://www.instagram.com/thi.naves/?hl=pt-br</a></p>
@@ -30,10 +30,13 @@
         <div class="skills">
             <h2>Habilidades Informáticas</h2>
             <ul id="skills-list">
+                <li>Sistema Operacional Windows</li>
+                <li>Pacote Office com ênfase em Excel</li>
+                <li>Linux Office e Administration</li>
                 <li>Introdução à linguagem em Python</li>
                 <li>Introdução à linguagem JAVA</li>
                 <li>Introdução à linguagem MySQL</li>
-                <li>Introdução à HTML e CSS</li>
+                <li>Introdução à HTML, CSS e JavaScript</li>
             </ul>
         </div>
         <div class="experience">
@@ -62,6 +65,7 @@
                 <li>Ensino Médio Completo – E.E. Maurício Zákia (2006)</li>
                 <li>Curso Avançado Excel – Professor Matheus Gualberto UFLA (2017)</li>
                 <li>Introdução Linguagem Python – Professor Gustavo Guanabara Curso em Vídeo Python (2020)</li>
+                <li>Red Hat System Administration I (RH124) - Linux</li>
                 <li>Ciências da Computação – FAM Faculdade das Américas (Cursando 7º período)</li>
             </ul>
         </div>
