--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
          <div>
             <button onclick="location.href='game.html'">Jogo da Velha</button>
             <!--<button onclick="location.href='contador.html'">Site Contagem</button>-->
+            <button onclick="location.href='snake.html'">Jogo da Cobrinha</button>
          </div>
     </div>
 </body>
